...
                    android:padding="@dimen/standard_half_padding"
                    android:text="@string/share_via_link_name_label"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/shareViaLinkNameValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/standard_half_padding"
                    android:layout_marginRight="@dimen/standard_half_padding"
                    android:inputType="textNoSuggestions"
                    android:textSize="15sp" />
...
                android:id="@+id/shareViaLinkPasswordSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/shareViaLinkPasswordSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:padding="@dimen/standard_half_padding" />
...
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RelativeLayout>

            <EditText
                android:id="@+id/shareViaLinkPasswordValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_half_margin"
                android:layout_marginRight="@dimen/standard_half_margin"
                android:inputType="textPassword"
                android:visibility="gone" />
...
                android:id="@+id/shareViaLinkExpirationSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/shareViaLinkExpirationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:checked="false"
...
                        android:layout_weight="1"
                        android:contentDescription="shareAddPublicLinkCancelButton"
                        android:text="@string/share_cancel_public_link_button"
                        android:theme="@style/Button.Primary" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/saveButton"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="shareAddPublicLinkConfirmButton"
                        android:text="@string/share_confirm_public_link_button"
...
