...
    <string name="common_remove_upload">Remove upload</string>
    <string name="common_retry_upload">Retry upload</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_back">Back</string>
    <string name="common_save_exit">Save &amp; exit</string>
    <string name="common_error">Error</string>
    <string name="common_loading">Loading&#8230;</string>
    <string name="common_unknown">unknown</string>
    <string name="common_error_unknown">Unknown error</string>
    <string name="common_pending">Pending</string>
    <string name="about_title">About</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Remove account</string>
...
		administrator.</string>
    <string name="share_link_file_no_exist">Unable to share. Please check whether the file exists</string>
    <string name="share_link_file_error">An error occurred while trying to share this file or folder</string>
    <string name="unshare_link_file_no_exist">Unable to unshare. Please check whether the file exists</string>
    <string name="unshare_link_file_error">An error occurred while trying to unshare this file or folder</string>
    <string name="update_link_file_no_exist">Unable to update. Please check whether the file exists </string>
    <string name="update_link_file_error">An error occurred while trying to update the share</string>
    <string name="share_link_password_title">Enter a password</string>
    <string name="share_link_empty_password">You must enter a password</string>

    <string name="activity_chooser_send_file_title">Send</string>

    <string name="copy_link">Copy link</string>
...
    <string name="share_with_user_section_title">Users and Groups</string>
    <string name="share_no_users">No data shared with users yet</string>
    <string name="share_incompatible_version">To share with other users, your server needs to be at least version 8.2</string>
    <string name="share_add_user_or_group">Add user or group</string>
    <string name="share_via_link_section_title">Public links</string>
    <string name="share_via_link_create_title">Create link share</string>
    <string name="share_via_link_edit_title">Edit link share</string>
    <string name="share_via_link_name_label">Link name</string>
    <string name="share_cancel_public_link_button">Cancel</string>
    <string name="share_confirm_public_link_button">Save</string>
    <string name="share_via_link_expiration_date_label">Expiration</string>
    <string name="share_via_link_password_label">Password</string>
    <string name="share_via_link_password_title">Secured</string>
...
